# pingmon

./: Cargo.toml  Cross.toml  LICENSE  README.md  output  sample.toml
.ci/: Dockerfile  build-all.sh  pingmon_0.2.0_amd64.deb  test_ubuntu_install.sh
assets/: service
src/: main.rs
