[package]
name = "pingmon"
version = "0.1.0"
edition = "2021"

[dependencies]
argp = "0.3.0"
atty = "0.2.14"
chrono = "0.4.38"
directories = "5.0.1"
env_logger = "0.11.3"
futures = "0.3.30"
influxdb = { version = "0.7.2", features = ["derive"] }
log = "0.4.21"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
toml = "0.8.12"
tracert = "0.7.0"

[[bin]]
name = "pingmon"
path = "src/main.rs"

